syntax = "proto3";

package cafelogos.pos;

import "common/common.proto";

option go_package = "github.com/KaguraGateway/cafelogos-grpc/pkg/pos;pos";


service PosService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
    rpc GetOrderBySeatId(GetOrderBySeatIdRequest) returns (GetOrderResponse) {}
    rpc PostOrder(PostOrderRequest) returns (PostOrderResponse) {}
    rpc DeleteOrder(DeleteOrderRequest) returns (common.Empty) {}
    rpc PostOrderPayment(PostOrderPaymentRequest) returns (OrderPaymentResponse) {}
    rpc UpdateOrderPayment(UpdateOrderPaymentRequest) returns (OrderPaymentResponse) {}
    rpc GetProducts(common.Empty) returns (GetProductsResponse) {}

    rpc PostNewClient(PostNewClientRequest) returns (PostNewClientResponse) {}
    rpc UpdateClient(UpdateClientRequest) returns (common.Empty) {}

    // Only Admin
    rpc GetProductCategories(common.Empty) returns (GetProductCategoriesResponse) {}
    rpc PostProductCategory(PostProductCategoryRequest) returns (common.Empty) {}

    rpc PostProduct(PostProductRequest) returns (common.Empty) {}
    rpc UpdateProduct(UpdateProductRequest) returns (common.Empty) {}
    rpc DeleteProduct(DeleteProductRequest) returns (common.Empty) {}

    rpc PostStock(PostStockRequest) returns (common.Empty) {}
    rpc GetStocks(common.Empty) returns (GetStocksResponse) {}

    rpc PostCoffeeBean(PostCoffeeBeanRequest) returns (common.Empty) {}
    rpc GetCoffeeBeans(common.Empty) returns (GetCoffeeBeansResponse) {}

    rpc DeleteAllOrders(common.Empty) returns (common.Empty) {}

    rpc PostSeat(PostSeatRequest) returns (common.Empty) {}
    rpc UpdateSeat(UpdateSeatRequest) returns (common.Empty) {}
    rpc GetSeats(common.Empty) returns (GetSeatsResponse) {}
}

/**
 * Request/Response
 */
message GetOrdersRequest {}
message GetOrdersResponse {
    repeated Order orders = 1;
}
message GetOrderResponse {
    Order order = 1;
}
message GetOrderBySeatIdRequest {
    string seat_id = 1;
}

message PostOrderRequest {
    Order order = 1;
}
message PostOrderResponse {
    Code code = 1;
    string error_message = 2;
    string call_number = 3;
    OrderPaymentResponse payment_response = 4;

    enum Code {
        OK = 0;
        SOLD_OUT_PRODUCT = 1;
        NOT_SOLD_PRODUCT = 2;
        OTHER = 3;
    }
}
message PostOrderPaymentRequest {
    string order_id = 1;
    OrderPayment payment = 2;
}
message UpdateOrderPaymentRequest {
    string order_id = 1;
    OrderPayment payment = 2;
}
message OrderPaymentResponse {
    bool is_ok = 1;
    OrderPayment payment = 2;
}
message DeleteOrderRequest {
    string order_id = 1;
}


message GetProductsResponse {
    repeated Product products = 1;
}

message GetProductCategoriesResponse {
    repeated ProductCategory product_categories = 1;
}
message PostProductCategoryRequest {
    string name = 1;
}
message PostProductRequest {
    ProductParam product = 1;
}
message UpdateProductRequest {
    string product_id = 1;
    ProductParam product = 2;
}
message DeleteProductRequest {
    string product_id = 1;
}
message PostStockRequest {
    string name = 1;
    uint32 quantity = 2;
}
message GetStocksResponse {
    repeated Stock stocks = 1;
}
message PostCoffeeBeanRequest {
    string name = 1;
    int32 gram_quantity = 2;
}
message GetCoffeeBeansResponse {
    repeated CoffeeBean coffee_beans = 1;
}

message PostSeatRequest {
    string name = 1;
}
message UpdateSeatRequest {
    Seat seat = 1;
}
message GetSeatsResponse {
    repeated Seat seats = 1;
}

message PostNewClientRequest {
    string name = 1;
}
message PostNewClientResponse {
    string id = 1;
    string name = 2;
}
message UpdateClientRequest {
    string id = 1;
    string name = 2;
}

/**
 * Types
 */
/** Product */
message Product {
    string product_id = 1;
    string product_name = 2;
    ProductCategory product_category = 3;
    ProductType product_type = 4;
    string product_color = 5;
    bool is_now_sales = 6;
    string created_at = 7;
    string updated_at = 8;
    // Only Coffee
    CoffeeBean coffee_bean = 9;
    repeated CoffeeBrew coffee_brews = 10;
    // Only Other
    uint64 amount = 11;
    Stock stock = 12;
}
message ProductParam {
    string product_name = 1;
    string product_category_id = 2;
    ProductType product_type = 3;
    bool is_now_sales = 4;
    string product_color = 5;
    // Only Coffee
    string coffee_bean_id = 6;
    repeated CoffeeBrew coffee_brews = 7;
    // Only Other
    uint64 amount = 8;
    string stock_id = 9;
}
message ProductCategory {
    string id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
}
enum ProductType {
    COFFEE = 0;
    OTHER = 1;
}
message CoffeeBean {
    string id = 1;
    string name = 2;
    int32 gram_quantity = 3;
    string created_at = 4;
    string updated_at = 5;
}
message CoffeeBrew {
    string id = 1;
    string name = 2;
    uint32 bean_quantity_grams = 3;
    uint64 amount = 4;
    string created_at = 5;
    string updated_at = 6;
}
message Stock {
    string id = 1;
    string name = 2;
    uint32 quantity = 3;
    string created_at = 4;
    string updated_at = 5;
}

/** Order */
message Order {
    string id = 1;
    repeated OrderItem items = 2;
    repeated OrderDiscount discounts = 3;
    OrderType order_type = 4;
    OrderPayment payment = 5;
    string order_at = 6;
    string call_number = 7;
    string client_id = 8;
    string seat_name = 9;

    enum OrderType {
        EatIn = 0;
        TakeOut = 1;
    }
}


message OrderItem {
    string product_id = 1;
    string quantity = 2;
    uint64 amount = 3;
    string coffee_brew_id = 4;
}

message OrderDiscount {
    string id = 1;
    DiscountType type = 2;
    uint64 discount_price = 3;

    enum DiscountType {
        PRICE = 0;
    }
}

message OrderPayment {
    string id = 1;
    PaymentType type = 2;
    uint64 receive_amount = 3;
    uint64 payment_amount = 4;
    uint64 change_amount = 5;
    string payment_at = 6;
    string updated_at = 7;

    enum PaymentType {
        CASH = 0;
    }
}

message Seat {
    string id = 1;
    string name = 2;
}